# plains

./: Cargo.toml  LICENSE  Makefile  Makefile-testing  Makefile.am  Makefile.in  README.md  cave.py  cavesel1.py  cavesel2.py  ch1end.py  config.status  configure  configure.ac  devjump.py  dialogue.cpp  dialogue.hpp  embark.py  friendflagger1.py  friendflagger2.py  hill.py  hillsel1.py  hillsel1ext.py  lizardman.py  main.c  main.py  main_woe.c  mm1.py  plains  plains-debug  reset.py  saan.py  standflagger.py  talk.py  talksel2.py  talksel3.py  tool.py  toolsel1.py  toolsel2.py  toolsel3.py
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
patches/: create-nlp.sh  macos-make.patch  no_ltinfo.patch  non-linux.patch  non_linux.patch  openbsd.patch  verbose.patch
src/: Makefile  Program.cs  Tools.cs  Ultravisor.cs  Visuals.cs  a.out  b_display.rs  backend.cpp  backend.hpp  battle.py  cave.py  cavesel1.py  cavesel2.py  cavesel3.py  ch1end.py  ch1endb.py  ch2flagger.py  compiler.c  config.ini  config2.ini  config3.ini  config3.py  devjump.py  dialogue.cpp  dialogue.hpp  director.cpp  embark.py  embark2.py  f_display.rs  friend1.py  friendflagger1.py  friendflagger2.py  friendflagger3.py  handig.py  handy.rb  hill.py  hill.rb  hillsel1.py  hillsel1ext.py  hillsel2.py  (+54 more)
src/area/: mod.rs  splash.rs  zero.rs
src/base/: Makefile  Makefile.in  c0_splash.c  c1_areas.c  c1_cave_subs.c  c1_hill_subs.c  c1_txt.c  glob_vis.c  landing_site_test.c  main.c  savesys.c  screen_manip.c
src/c++-rewrite/: backend.cpp  backend.hpp  dialogue.cpp  (+9 more)
tools/: ltinfo-remover.sh
(+40 files in other folders)
