SUBDIRS = src/base src/header
AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = plains
plains_LDADD = -lncurses

plains_SOURCES = \
  src/base/c0_splash.c \
  src/base/c1_areas.c \
  src/base/c1_cave_subs.c \
  src/base/c1_hill_subs.c \
  src/base/c1_txt.c \
  src/base/glob_vis.c \
  src/base/main.c \
  src/base/savesys.c \
  src/base/screen_manip.c \
  src/header/c0_splash.h \
  src/header/c1_areas.h \
  src/header/c1_cave_subs.h \
  src/header/c1_hill_subs.h \
  src/header/c1_txt.h \
  src/header/glob_vars.h \
  src/header/glob_vis.h \
  src/header/savesys.h \
  src/header/screen_manip.h
